fix lobby chat for dark mode - chat css to default

--- a/ui/lobby/css/_lobby.scss
+++ b/ui/lobby/css/_lobby.scss
@@ -46,17 +46,6 @@ body {
     height: 370px;
     margin-bottom: 0px;
 
-    @if $theme-dark {
-      box-shadow: none;
-
-      &__tabs,
-      &__content,
-      &__say,
-      &__tab-active {
-        background: $c-bg-page !important;
-      }
-    }
-
     @include breakpoint($mq-col3) {
       margin-top: 30px;
     }
